<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_rbpf</name>
  <version>0.0.0</version>
  <description>RBPF implementation</description>
  <maintainer email="guangtian0330@gmail.com">agilex</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rviz2</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
